Incluindo texto informativo

--- a/templates/template.html
+++ b/templates/template.html
@@ -74,7 +74,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">
+                    <a class="nav-link" title="Sair" href="{% url 'logout' %}">
                         <i class="fas fa-sign-out-alt"></i>
                     </a>
                 </li>
