--- a/templates/template-vendedor.html
+++ b/templates/template-vendedor.html
@@ -53,7 +53,7 @@
                         <div class="card-body box-profile">
                             <div class="row">
                                 <div class="col-md-6 col-sm-12">
-                                    <a href="{% url 'info' %}">
+                                    <a href="{% url 'verifica_veiculo' %}">
                                         <div class="small-box bg-info">
                                             <div class="inner" style="height: 100px;">
                                                 <h4>Verificar veículo</h4>
@@ -66,10 +66,10 @@
                                 </div>
                                 
                                 <div class="col-md-6 col-sm-12">
-                                    <a href="{% url 'comprar' %}" class="small-box-footer">
+                                    <a href="{% url 'vender_creditos' %}" class="small-box-footer">
                                         <div class="small-box bg-green">
                                             <div class="inner" style="height: 100px;">
-                                                <h5>Comprar créditos</h5>
+                                                <h5>Vender créditos</h5>
                                             </div>
                                             <div class="icon">
                                                 <i class="fas fa-money-check"></i>
