--- a/vendedor/templates/verifica.html
+++ b/vendedor/templates/verifica.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% comment %} BLOCO DE TITULO DO SITE {% endcomment %}
-{% block title %}Verificar Veículo{% endblock %}
-{% block name_page %}Verificar Veículo{% endblock %}
+{% block title %}Verificar veículo{% endblock %}
+{% block name_page %}Verificar veículo{% endblock %}
 
 {% comment %} BLOCO HEAD {% endcomment %}
 {% block head %}{% endblock %}
