Incluindo nome no menu superior

--- a/templates/template-vendedor.html
+++ b/templates/template-vendedor.html
@@ -30,6 +30,11 @@
         <div class="wrapper">
             <!-- NAV BAR TOP -->
             <nav class="main-header navbar navbar-expand-md navbar-dark navbar-info">
+                <!-- Left navbar links -->
+                <ul class="navbar-nav">
+                    <span class="brand-text font-weight-light">Easy Park</span>
+                </ul>
+                
                 <!-- Right navbar links -->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
